--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install Platform Deps
         run: apt install -y jacklib0 jacklib-dev libasound2-dev
       - name: Set up Python 3.8
-        uses: actions/python-setup@v3
+        uses: actions/setup-python@v3
         with: 
           python-version: "3.8"
       - name: Install dependencies
