--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-mido
-JACK-Client
-python-rtmidi
-pytest
-pulsectl
+mido >= 1.2.10
+JACK-Client >= 0.5.3
+python-rtmidi >= 1.4.9
+pulsectl >= 22.3.2
+coloredlogs >= 15.0.1
+pyyaml >= 6.0
+pytest >=7.1.1
 
