--- a/logging.yaml
+++ b/logging.yaml
@@ -56,7 +56,7 @@ handlers:
         class: logging.handlers.RotatingFileHandler
         level: WARN
         formatter: standard
-        filename: /tmp/logs/warn.log
+        filename: /tmp/warn.log
         maxBytes: 10485760 # 10MB
         backupCount: 20
         encoding: utf8
@@ -67,12 +67,12 @@ root:
     propogate: yes
 
 loggers:
-    serialization:
+    diagram.serialization:
         level: DEBUG
         handlers: [console, info_file_handler, error_file_handler, critical_file_handler, debug_file_handler, warn_file_handler]
         propogate: no
     
-    model:
+    diagram.model:
         level: DEBUG
         handlers: [console, info_file_handler, error_file_handler, critical_file_handler, debug_file_handler, warn_file_handler]
         propogate: no
